src/components/About/about.module.css
.title {
  font-size: var(--text-5xl);
  font-weight: 500;
  color: var(--primary);
  margin-bottom: 0;
}

.subtitle {
  font-size: var(--text-3xl);
  font-weight: 300;
  margin-top: 0;
}
.imageContainer {
    width: 50%;
}
.image {
    width: 100%;
    min-height: 500px;
    height: 100%;
}

.section {
    display: flex;
    background-color: #eee;
    align-items: center;
    color: var(--primary);
    transition: background-color 0.5s ease;
}

.section:hover {
    display: flex;
    background-color: var(--primary);
    color: #eee;
    align-items: center;
}

.sectionRight {
    flex-flow: row-reverse;
    justify-content: space-between;
}

.textContainer {
    margin-left: 3rem;
    margin-bottom: 3rem;
    max-width: 700px;
}

.textContainer h2 {
    font-size: var(--text-3xl);
}

@media (max-width: 1024px) {
    .textContainer {
        max-width: 400px;
        font-size: small;
        margin-right: 3rem;
        margin-top: 1rem;
        margin-bottom: 1rem;
    }
}

@media (max-width: 768px) {
    .section {
        flex-wrap: wrap;
    }
    .textContainer {
        font-size: medium;
        margin: 1rem auto;
        max-width: 90%;
    }
}

